docs: update README with changelog and document all recent changes\n\n- Added detailed changelog summarizing all major changes since last commit\n- Documented new Streamlit dashboard, REST API, and admin secret management\n- Updated AI/ML integration, broker support, and security practices\n- requirements.txt: added all new dependencies for full feature support\n- config_template.py: now only non-secret config, secrets managed via dashboard\n- Improved documentation, error handling, and modularity across codebase\n\nSee README.md for full details.

--- a/requirements.txt
+++ b/requirements.txt
@@ -12,3 +12,12 @@ requests
 anthropic
 google-generativeai
 transformers
+nsepython
+matplotlib
+backtrader
+streamlit
+kiteconnect
+breeze-connect
+alpaca-trade-api
+pysqlcipher3
+streamlit-authenticator
