Fix Python 3.13 compatibility: remove SQLCipher, update urllib3/requests

--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,8 @@ pydantic
 plotly
 kaleido
 requests
+urllib3
+six
 anthropic
 google-generativeai
 transformers
@@ -19,5 +21,4 @@ streamlit
 kiteconnect
 breeze-connect
 alpaca-trade-api
-pysqlcipher3
 streamlit-authenticator
